<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    <TableLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="#ffffff" >

        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="#b0b0b0"
                android:text="@string/difficulty"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <RadioGroup
                android:id="@+id/difficulty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >
                <RadioButton
                    android:id="@+id/df_easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/df_easy" />
                <RadioButton
                    android:id="@+id/df_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/df_medium" />
                <RadioButton
                    android:id="@+id/df_hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/df_hard" />
            </RadioGroup>
        </TableRow>
        <TableRow
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:background="#b0b0b0"
                android:text="@string/size"
                android:textColor="#000"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/cellsize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >
                <RadioButton
                    android:id="@+id/size_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sz_small" />
                <RadioButton
                    android:id="@+id/size_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sz_medium" />
                <RadioButton
                    android:id="@+id/size_large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sz_large" />
            </RadioGroup>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dlgCancel"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/cancel"
            android:textStyle="bold" />

        <Button
            android:id="@+id/dlgOK"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp" />
    </LinearLayout>
</LinearLayout>
